--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -17,6 +17,10 @@
   justify-content: flex-start;
   min-width: 320px;
   min-height: 100%;
+
+  &--hidden {
+    overflow-y: hidden;
+  }
 }
 
 .page__header {
@@ -41,6 +45,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 20;
 
   display: none;
 
