--- a/source/sass/blocks/tariffs.scss
+++ b/source/sass/blocks/tariffs.scss
@@ -2,18 +2,19 @@ $radius-mobile: 20px;
 
 .tariffs {
   position: fixed;
-  z-index: 10;
+  z-index: 25;
   top: calc(50% + #{$spacer-mobile} / 2);
 
   left: 20px;
   right: 20px;
-
   display: none;
   min-width: 270px;
   max-width: 400px;
   max-height: 443px;
-  overflow: auto;
   margin: auto;
+
+
+  overflow-y: auto;
 
   background-color: $white-400;
   border-radius: $radius-mobile;
