--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -95,6 +95,8 @@ $radius: 30px;
   @media #{$tablet} {
     margin: 0 7px 0 0;
     padding: 0;
+
+    border-bottom: none;
   }
 
   @media #{$desktop} {
