--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,7 @@
 
 // Blocks
 
+@import "blocks/focus-visible.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/list.scss";
 @import "blocks/page.scss";
