--- a/source/sass/blocks/route.scss
+++ b/source/sass/blocks/route.scss
@@ -212,6 +212,7 @@ $arrow-down-offset: 6px;
       position: relative;
       z-index: 1;
 
+      flex-shrink: 0;
       width: 11px;
       height: 8px;
 
@@ -222,6 +223,15 @@ $arrow-down-offset: 6px;
 
     &:hover {
       border-color: $grey-600;
+    }
+  }
+
+  &--offset-arrow {
+    @media #{$mobile-max} {
+      &::after {
+        position: absolute;
+        right: 15px;
+      }
     }
   }
 
@@ -243,7 +253,7 @@ $arrow-down-offset: 6px;
       bottom: $border-width;
       left: calc(100% - 56px);
 
-      background-image: linear-gradient(to left, $white-400 65%, transparent);
+      background-image: linear-gradient(to left, $white-400 65%, rgba($white-400, 0));
       border-radius: 0 4px 4px 0;
     }
   }
